Created attachment 115134 [details] hyperlink in txtbox Problem Description: 1. Open attached document in CALC. 2. Save as xlsx again. 3. Open the roundtrip file in excel. Expected output: textbox Hyperlink is working. Actual output: textbox hyperlink is not working.
yogesh.bharate001 committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=a7d843b6112250d1a41c2a56d8e083ccf6538bca tdf#90890: hyperlink inside textbox is not exported after roundtrip. It will be available in 5.0.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Fix (+unit test) merged -> RESOLVED FIXED
Verified on Version: 5.0.0.0.alpha1+ (x64) Build ID: ddb3c4531c657cda6ae20dd950020cea1d12ba2e text box hyperlink is being preserved after roundtrip