tdf#90890: hyperlink inside textbox is not exported after roundtrip.

Problem Description:
- Text box hyperlink is not exported after roundtrip.

XML Difference: in drawing1.xml
Original file:
<xdr:cNvPr id="2" name="TextBox 1">
    <a:hlinkClick xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" r:id="rId1" tooltip="text123"/>
</xdr:cNvPr>

After RT:
<xdr:cNvPr id="0" name="CustomShape 1"/>
<a:hlinkClick> is missing.

Change-Id: I01082de5d7d2e1a9323e84f54c97d5444cab13cd
Solution: Added support for hyperlink in text box.
Reviewed-on: https://gerrit.libreoffice.org/15555
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: David Tardon <dtardon@redhat.com>
Tested-by: David Tardon <dtardon@redhat.com>